# raw2jpegTest

./: CMakeLists.txt  README.md  Result.md  opencv_acc_quality  opencv_quality  turbo_quality
encoders/: TurboEncoder.cpp  TurboEncoder.hpp  compile_commands.json  encoder.hpp  jpeg_encoder.hpp  libjpegEncoder.cpp  libjpegEncoder.hpp  opencvEncoder.cpp  opencvEncoder.hpp
encoders/.cache/clangd/index/: TurboEncoder.cpp.7930A5718F1B746F.idx  algorithmfwd.h.FBECAF0DE0E12591.idx  aligned_buffer.h.42B97A782F50B00B.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.E8D17456CCD03C24.idx  atomic_lockfree_defines.h.57F97BFE26B26791.idx  auto_ptr.h.FC7AB8BCDAC8B524.idx  base.hpp.DDE89F9E396DDD0E.idx  bufferpool.hpp.186E4EB0FE00306D.idx  byteswap.h.6F2302C3C3B7048C.idx  c++config.h.FF995F2295F9C108.idx  cfloat.5EA9C239F4E7894F.idx  char_traits.h.4EFA6515BADD4E34.idx  climits.FA74EB46BBCB85CD.idx  codecvt.h.E09221080C8DF8A7.idx  complex.71D1EF3C38FA9B98.idx  concurrence.h.FC4377DE64966C6E.idx  cpu-set.h.E2616A97511B788D.idx  ctime.59FB0EFE86829D95.idx  cv_cpu_dispatch.h.30F643A13CA1927B.idx  cvstd.hpp.D8E4ED11C38A348A.idx  cvstd.inl.hpp.608AE0BE5D992884.idx  cvstd_wrapper.hpp.2AA9A7191A6EA957.idx  errno.h.061397FDE4C98757.idx  error_t.h.A969CA67F72DCE1C.idx  exception_ptr.h.6AD7499572D38B27.idx  fp-fast.h.36865E5392BB6B93.idx  functional.EA9D8BCD2FCF3711.idx  int_limits.h.938FC17C349B1E25.idx  interface.h.A4C8FFB1B6D9B8E9.idx  iosfwd.BB4E26802B0F2E51.idx  iscanonical.h.C15D048E1838CBE7.idx  istream.4E00F8AF3624697E.idx  jconfig.h.B9D11C7C502F851B.idx  jmorecfg.h.FD0EC82D4490AE28.idx  libc-header-start.h.DE4EC70643B7CD1B.idx  libm-simd-decl-stubs.h.A66C362EA63E5365.idx  limits.1C0E814FF57C9438.idx  locale.h.5F1EA2E91D0CD92F.idx  locale.h.AF6D7871B4798B5C.idx  (+67 more)
run/: CMakeLists.txt  calmem.cpp  test.cpp  testcpu.cpp
run/.cache/clangd/index/: TurboEncoder.cpp.7930A5718F1B746F.idx  TurboEncoder.hpp.DD36A04306DE8735.idx  __locale_t.h.3F73A78C1398A1A9.idx  __stddef_max_align_t.h.5E02E91556BADFB4.idx  algorithm.5F4C2AA46A8BEABB.idx  alloc_traits.h.73271DB76FBC00A1.idx  array.51ED8AD90D6C784B.idx  assert.h.F44EF353D67C7E11.idx  atomic_base.h.8671CD26A99A0A19.idx  basic_file.h.A38D84BB76F8B43A.idx  basic_string.h.60115CE096ADD9CC.idx  basic_string.tcc.F2690E952979DAB0.idx  c++io.h.FD8E0E152A3E0AFC.idx  cctype.439BBC6FC072FE4C.idx  cdefs.h.8113CACA75BA375E.idx  check.hpp.EBA646AAC9412CD8.idx  chrono.81B13B50BDCE1AEA.idx  cmath.8C3FD28B3AEA5194.idx  cookie_io_functions_t.h.F008C27662A34FC7.idx  core.hpp.B582ACFD1DAFE155.idx  cpp_type_traits.h.9FCEAC032C2CB0FE.idx  cstddef.FC32D8284AE61D4E.idx  cstdint.2A22CA474559A259.idx  cstdio.EAFE25C1B68EFBA4.idx  cstdlib.D4F65DCF20F17EA3.idx  cstring.0B6A0AC3DB7332EC.idx  ctype.h.8C666B63C116FFB8.idx  cvdef.h.0EF26D41DB2880AA.idx  cxxabi_init_exception.h.B3445318FAEC8110.idx  emmintrin.h.C36DD45ED7C2BFF7.idx  encoder.hpp.ACB5F24D7D0D49C3.idx  endian.h.86AC4579400E1F3C.idx  endian.h.CBC7B63F4780E810.idx  errno.h.3B388C5618606E4B.idx  exception.5D9ECD0C99116930.idx  exception.h.49E1CB96CF340EE7.idx  fast_math.hpp.88F805E13E25FF64.idx  features.h.839A4F3F7C9A4375.idx  float.h.E388F692006A174B.idx  floatn-common.h.220778C34B31099D.idx  (+70 more)
